# Hackathon-2.0

./: README.md
client/: SUPABASE_SETUP.md  middleware.ts  package-lock.json  package.json
client/app/: layout.tsx  page.tsx
client/app/api/analyze/: route.ts
client/app/auth/callback/: route.ts
client/components/: auth-modal.tsx  dancing-bin.tsx  loading-skeleton.tsx  login-required-modal.tsx  supabase-status.tsx  waste-analyzer.tsx  waste-category-badge.tsx
client/hooks/: use-auth.tsx
server/: .env  pyproject.toml  requirements.txt
server/app/: main.py
server/src/: firecrawl.py  models.py  prompts.py  workflow.py
